manifests/argo-cd/ingress.yaml
---
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-dashboard
  namespace: "argocd"
  labels:
    app.kubernetes.io/instance: argocd
  annotations:
    cert-manager.io/issuer: "selfsigned - default - adds 'cert-manager.io/issuer' - cluster - adds 'cert-manager.io/cluster-issuer' - disabled - disables cert-manager annotations"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "argocd.master.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
      - argocd.master.com
      secretName: argocd-dashboard-certs
